<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="title">Login</string>
    <string name="button1">Iniciar sesión</string>
    <string name="email">Dirección email</string>
    <string name="password">Contraseña</string>
    <string name="AltLogo">Sherlock logo</string>
    <string name="googleIcon">Google icon</string>
    <string name="facebookIcon">Facebook icon</string>
    <string name="forgotPassword">¿Has olvidado tu
        <a href="https://www.google.com/?hl=es">contraseña?</a>
    </string>
    <string name="notAccount">¿No tienes una cuenta?</string>
    <string name="Register">Regístrate</string>
    <string name="contacto">Arsene Lupin</string>
    <string name="nickname">Nickname</string>
    <string name="resgister2">Resgistrarse</string>
    <string name="vacio" />
    <string name="user_image">Usuario</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="opciones">Opciones</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notificaciones</string>
    <string name="search">Buscar</string>
    <string name="sort">Ordenar</string>
    <string name="settings">Opciones</string>
    <string name="lista">Lista</string>
    <string name="favoritos">Favoritos</string>
    <string name="errorEmail">Introduzca un email válido</string>
    <string name="errorPassword">Introduzca una contraseña válido</string>
    <string name="fecha">Fecha</string>
    <string name="errorFecha">Introduzca una fecha valida</string>
</resources>